--- a/client/src/components/ProjectsPage/ProjectsPage.module.css
+++ b/client/src/components/ProjectsPage/ProjectsPage.module.css
@@ -3,3 +3,20 @@
     display: flex;
     flex-direction: column;
 }
+
+.projectsAndFilters {
+    flex-grow: 1;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr;
+}
+
+.projects {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.projects > * {
+    margin: 20px;
+}
