--- a/client/src/components/ProjectsPage/ProjectFilters/ProjectFilters.module.css
+++ b/client/src/components/ProjectsPage/ProjectFilters/ProjectFilters.module.css
@@ -1,10 +1,13 @@
 .root {
     width: 292px;
     border-right: var(--border-1);
+}
+
+.filters {
     padding-left: 22px;
     padding-top: 17px;
 }
 
-.root > * {
+.filters > * {
     margin-bottom: 17px;
 }
