--- a/client/src/components/AboutPage/PersonalInfo/PersonalInfo.module.css
+++ b/client/src/components/AboutPage/PersonalInfo/PersonalInfo.module.css
@@ -1,21 +1,34 @@
 .root {
-    padding: 2px 20px;
-    display: flex;
-    align-items: center;
-    height: 40px;
+    padding: 22px 0;
 }
 
-.file {
+.node {
+    position: relative;
+    margin-left: 42px;
     cursor: pointer;
     display: flex;
     align-items: center;
     height: 25px;
 }
 
-.fileIcon {
-    height: 100%
+.node:not(:first-child) {
+    margin-top: 16px;
 }
 
-.fileName {
+.nodeIcon {
+    height: 100%;
+    margin-right: 8px;
+}
+
+.nodeName {
     color: var(--light-gray)
+}
+
+.arrow {
+    position: absolute;
+    left: -21px;
+}
+
+.folderOpen .arrow {
+    transform: rotate(-90deg);
 }
