added files row numeration

--- a/client/src/components/AboutPage/AboutPage.module.css
+++ b/client/src/components/AboutPage/AboutPage.module.css
@@ -34,5 +34,10 @@
     margin-top: 18px;
     font-size: 18px;
     line-height: 27px;
+    overflow: auto;
 }
 
+.index {
+    user-select: none;
+    margin-right: 24px;
+}
