--- a/client/src/components/Header/Navbar/Navbar.module.css
+++ b/client/src/components/Header/Navbar/Navbar.module.css
@@ -1,3 +1,7 @@
+.root {
+    flex-grow: 1;
+}
+
 .list {
     display: flex;
     list-style: none;
@@ -8,6 +12,15 @@
     border-right: var(--border-1);
     color: inherit;
     text-decoration: none;
+}
+
+.list li:last-child {
+    margin-left: auto;
+}
+
+.list li:last-child a {
+    border-right: none;
+    border-left: var(--border-1);
 }
 
 .active {
