--- a/client/src/components/special/Header/Navbar/Navbar.module.css
+++ b/client/src/components/special/Header/Navbar/Navbar.module.css
@@ -1,17 +1,24 @@
 .root {
     flex-grow: 1;
+    height: 100%;
 }
 
 .list {
     display: flex;
+    height: 100%;
     list-style: none;
 }
 
 .link {
-    padding: 17px 31px 17px 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 31px 0 32px;
     border-right: var(--border-1);
     color: inherit;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .list li:last-child {
@@ -27,3 +34,22 @@
     color: #fff;
     border-bottom: 3px solid orange;
 }
+
+.active .linkText {
+    margin-top: 2px;
+}
+
+@media screen and (max-width: 1200px) {
+    .list li:last-child {
+        margin-left: unset;
+    }
+
+    .list li {
+        flex-grow: 1;
+    }
+
+    .link {
+        padding: 0;
+    }
+}
+
