--- a/client/src/components/special/MainPage/MainPage.module.css
+++ b/client/src/components/special/MainPage/MainPage.module.css
@@ -4,9 +4,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
 }
 
 .text {
+    position: relative;
+    z-index: 10;
     margin-right: 9.5%;
 }
 
