--- a/client/src/components/special/ProjectsPage/ProjectsPage.module.css
+++ b/client/src/components/special/ProjectsPage/ProjectsPage.module.css
@@ -18,3 +18,13 @@
     display: flex;
     height: 100%;
 }
+
+@media screen and (max-width: 665px) {
+    .twoColumns {
+        flex-direction: column;
+    }
+
+    .firstColumn {
+        width: 100%;
+    }
+}
