--- a/client/src/components/special/SnakeGame/SnakeGame.module.css
+++ b/client/src/components/special/SnakeGame/SnakeGame.module.css
@@ -123,6 +123,7 @@
     transform: translate(-50%);
     padding: 10px 14px;
 
+    border: none;
     white-space: nowrap;
     background-color: var(--orange);
     color: var(--background-color);
