--- a/client/src/components/special/Footer/Footer.module.css
+++ b/client/src/components/special/Footer/Footer.module.css
@@ -52,3 +52,13 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 400px) {
+    .link {
+        flex-grow: 1;
+    }
+
+    .githubLink.githubLink {
+        border-left: none;
+    }
+}
